[gd_scene load_steps=10 format=2]

[ext_resource path="res://mane.gd" type="Script" id=1]
[ext_resource path="res://single_stage.tscn" type="PackedScene" id=2]
[ext_resource path="res://playerCam.gd" type="Script" id=3]
[ext_resource path="res://assets/huge_revolution1.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/music1.ogg" type="AudioStream" id=5]
[ext_resource path="res://launchpad.tscn" type="PackedScene" id=6]

[sub_resource type="PlaneShape" id=1]

plane = Plane( 0, 1, 0, 0 )

[sub_resource type="ProceduralSky" id=2]

radiance_size = 4
sky_top_color = Color( 0.0470588, 0.454902, 0.976471, 1 )
sky_horizon_color = Color( 0.556863, 0.823529, 0.909804, 1 )
sky_curve = 0.25
sky_energy = 1.0
ground_bottom_color = Color( 0.101961, 0.145098, 0.188235, 1 )
ground_horizon_color = Color( 0.482353, 0.788235, 0.952941, 1 )
ground_curve = 0.01
ground_energy = 1.0
sun_color = Color( 1, 1, 1, 1 )
sun_latitude = 35.0
sun_longitude = 0.0
sun_angle_min = 1.0
sun_angle_max = 100.0
sun_curve = 0.05
sun_energy = 16.0
texture_size = 2

[sub_resource type="Environment" id=3]

background_mode = 2
background_sky = SubResource( 2 )
background_sky_custom_fov = 0.0
background_color = Color( 0, 0, 0, 1 )
background_energy = 1.0
background_canvas_max_layer = 0
ambient_light_color = Color( 1, 1, 1, 1 )
ambient_light_energy = 0.09
ambient_light_sky_contribution = 1.0
fog_enabled = false
fog_color = Color( 1, 1, 1, 1 )
fog_sun_color = Color( 1, 0.866667, 0.466667, 1 )
fog_sun_amount = 1.0
fog_depth_enabled = true
fog_depth_begin = 50.0
fog_depth_curve = 0.287174
fog_transmit_enabled = true
fog_transmit_curve = 1.0
fog_height_enabled = false
fog_height_min = 0.0
fog_height_max = 100.0
fog_height_curve = 1.0
tonemap_mode = 0
tonemap_exposure = 1.0
tonemap_white = 1.0
auto_exposure_enabled = false
auto_exposure_scale = 0.4
auto_exposure_min_luma = 0.05
auto_exposure_max_luma = 8.0
auto_exposure_speed = 0.5
ss_reflections_enabled = false
ss_reflections_max_steps = 64
ss_reflections_fade_in = 0.15
ss_reflections_fade_out = 2.0
ss_reflections_depth_tolerance = 0.2
ss_reflections_roughness = true
ssao_enabled = false
ssao_radius = 1.0
ssao_intensity = 1.0
ssao_radius2 = 0.0
ssao_intensity2 = 1.0
ssao_bias = 0.01
ssao_light_affect = 0.0
ssao_color = Color( 0, 0, 0, 1 )
ssao_quality = 0
ssao_blur = 3
ssao_edge_sharpness = 4.0
dof_blur_far_enabled = true
dof_blur_far_distance = 0.01
dof_blur_far_transition = 500.0
dof_blur_far_amount = 0.05
dof_blur_far_quality = 2
dof_blur_near_enabled = false
dof_blur_near_distance = 2.0
dof_blur_near_transition = 1.0
dof_blur_near_amount = 0.1
dof_blur_near_quality = 1
glow_enabled = false
glow_levels/1 = false
glow_levels/2 = false
glow_levels/3 = true
glow_levels/4 = false
glow_levels/5 = true
glow_levels/6 = false
glow_levels/7 = false
glow_intensity = 0.8
glow_strength = 1.0
glow_bloom = 0.0
glow_blend_mode = 2
glow_hdr_threshold = 1.0
glow_hdr_scale = 2.0
glow_bicubic_upscale = false
adjustment_enabled = false
adjustment_brightness = 1.0
adjustment_contrast = 1.0
adjustment_saturation = 1.0
_sections_unfolded = [ "Adjustments", "Ambient Light", "Auto Exposure", "Background", "DOF Far Blur", "DOF Near Blur", "Fog", "Glow", "Resource", "SS Reflections", "SSAO", "Tonemap" ]

[node name="Node" type="Node" index="0"]
script = ExtResource( 1 )

[node name="DirectionalLight" type="DirectionalLight" parent="." index="0"]
transform = Transform( 0.288901, 2.70376e-06, -0.957359, 0.36163, -3.81826, 0.109128, 0.886431, 1.5577, 0.267498, -121.97, 129.692, 19.548 )
layers = 1
light_color = Color( 1, 1, 1, 1 )
light_energy = 1.0
light_indirect_energy = 1.0
light_negative = false
light_specular = 1.0
light_bake_mode = 1
light_cull_mask = -1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.1
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
directional_shadow_mode = 2
directional_shadow_split_1 = 0.1
directional_shadow_split_2 = 0.2
directional_shadow_split_3 = 0.5
directional_shadow_blend_splits = false
directional_shadow_normal_bias = 0.8
directional_shadow_bias_split_scale = 0.25
directional_shadow_depth_range = 0
directional_shadow_max_distance = 200.0
_sections_unfolded = [ "Directional Shadow", "Light", "Shadow" ]

[node name="bfr" type="Spatial" parent="." index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.37005, 0 )
_sections_unfolded = [ "Transform" ]

[node name="BFR" parent="bfr" index="0" instance=ExtResource( 2 )]

[node name="bfr2" type="Spatial" parent="." index="2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -124.171, 3.37006, -117.993 )
visible = false
_sections_unfolded = [ "Transform" ]

[node name="BFR" parent="bfr2" index="0" instance=ExtResource( 2 )]

[node name="bfr3" type="Spatial" parent="." index="3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -256.064, -1.27085, -219.615 )
visible = false
_sections_unfolded = [ "Transform" ]

[node name="BFR" parent="bfr3" index="0" instance=ExtResource( 2 )]

[node name="bfr4" type="Spatial" parent="." index="4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -380.852, 1.82309, -347.802 )
visible = false
_sections_unfolded = [ "Transform" ]

[node name="BFR" parent="bfr4" index="0" instance=ExtResource( 2 )]

[node name="bfr5" type="Spatial" parent="." index="5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -510.892, 1.43634, -472.281 )
visible = false
_sections_unfolded = [ "Transform" ]

[node name="BFR" parent="bfr5" index="0" instance=ExtResource( 2 )]

[node name="bfr6" type="Spatial" parent="." index="6"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -644.329, 2.20983, -589.966 )
visible = false
_sections_unfolded = [ "Transform" ]

[node name="BFR" parent="bfr6" index="0" instance=ExtResource( 2 )]

[node name="bfr7" type="Spatial" parent="." index="7"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -772.824, 6.07726, -723.712 )
visible = false
_sections_unfolded = [ "Transform" ]

[node name="BFR" parent="bfr7" index="0" instance=ExtResource( 2 )]

[node name="bfr8" type="Spatial" parent="." index="8"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -901.01, 2.59658, -850.045 )
visible = false
_sections_unfolded = [ "Transform" ]

[node name="BFR" parent="bfr8" index="0" instance=ExtResource( 2 )]

[node name="ortho_cam" type="Camera" parent="." index="9"]
transform = Transform( -0.704806, -0.70919, -3.44974, -3.67138e-09, -0.0243145, 199.941, -0.7094, 0.704597, 3.42739, -2.88985, 160.647, 2.7197 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 1
current = true
fov = 20.0
size = 21.0
near = 0.05
far = 10000.0
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="StaticBody" type="StaticBody" parent="." index="10"]
input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )
_sections_unfolded = [ "Collision", "Transform" ]

[node name="CollisionShape" type="CollisionShape" parent="StaticBody" index="0"]
shape = SubResource( 1 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="grid_cam" type="Camera" parent="." index="11"]
transform = Transform( 0.999515, -0.0192426, -0.0244812, 0.0251356, 0.962651, 0.269574, 0.0183796, -0.270058, 0.962667, -3.72637, 71.4699, 24.0231 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = false
fov = 15.0
size = 1.0
near = 0.05
far = 10000.0
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="engine_cam" type="Camera" parent="." index="12"]
transform = Transform( 1, 0, 0, 0, 0.999999, 0, 0, 0, 1, -5.98915, 67.2437, 61.6205 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = false
fov = 70.0
size = 1.0
near = 0.05
far = 10000.0
_sections_unfolded = [ "Transform" ]

[node name="playerCam" type="Camera" parent="." index="13"]
transform = Transform( 1, 0, 0, 0, 0.959994, -0.280015, 0, 0.280015, 0.959995, 133.637, -42.5651, 306.638 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = true
fov = 70.0
size = 1.0
near = 0.05
far = 100000.0
script = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="elon" type="AudioStreamPlayer3D" parent="." index="14"]
stream = ExtResource( 4 )
attenuation_model = 0
unit_db = 0.0
unit_size = 1.0
max_db = 3.0
pitch_scale = 1.0
autoplay = false
max_distance = 0.0
out_of_range_mode = 0
bus = "Master"
area_mask = 1
emission_angle_enabled = false
emission_angle_degrees = 45.0
emission_angle_filter_attenuation_db = -12.0
attenuation_filter_cutoff_hz = 22050.0
attenuation_filter_db = 0.0
doppler_tracking = 0
_sections_unfolded = [ "Attenuation Filter", "Doppler", "Emission Angle", "Pause" ]

[node name="music" type="AudioStreamPlayer" parent="." index="15"]
stream = ExtResource( 5 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="launchpad" parent="." index="16" instance=ExtResource( 6 )]
transform = Transform( 36, 0, 0, 0, 36, 0, 0, 0, 36, 2.97907, 0, 105.024 )
mode = 1
_sections_unfolded = [ "Collision", "Transform" ]

[node name="launchpad2" parent="." index="17" instance=ExtResource( 6 )]
transform = Transform( 36, 0, 0, 0, 36, 0, 0, 0, 36, -121.164, 0, -12.4729 )
mode = 1
_sections_unfolded = [ "Transform" ]

[node name="launchpad3" parent="." index="18" instance=ExtResource( 6 )]
transform = Transform( 36, 0, 0, 0, 36, 0, 0, 0, 36, -253.02, 0, -114.037 )
mode = 1
_sections_unfolded = [ "Transform" ]

[node name="launchpad4" parent="." index="19" instance=ExtResource( 6 )]
transform = Transform( 36, 0, 0, 0, 36, 0, 0, 0, 36, -377.748, 0, -242.329 )
mode = 1
_sections_unfolded = [ "Transform" ]

[node name="launchpad5" parent="." index="20" instance=ExtResource( 6 )]
transform = Transform( 36, 0, 0, 0, 36, 0, 0, 0, 36, -507.821, 0, -367.057 )
mode = 1
_sections_unfolded = [ "Transform" ]

[node name="launchpad6" parent="." index="21" instance=ExtResource( 6 )]
transform = Transform( 36, 0, 0, 0, 36, 0, 0, 0, 36, -641.459, 0, -484.658 )
mode = 1
_sections_unfolded = [ "Transform" ]

[node name="launchpad7" parent="." index="22" instance=ExtResource( 6 )]
transform = Transform( 36, 0, 0, 0, 36, 0, 0, 0, 36, -769.751, 0, -618.295 )
mode = 1
_sections_unfolded = [ "Transform" ]

[node name="launchpad8" parent="." index="23" instance=ExtResource( 6 )]
transform = Transform( 36, 0, 0, 0, 36, 0, 0, 0, 36, -898.042, 0, -744.805 )
mode = 1
_sections_unfolded = [ "Transform" ]

[node name="WorldEnvironment" type="WorldEnvironment" parent="." index="24"]
environment = SubResource( 3 )
_sections_unfolded = [ "Pause" ]

[node name="DirectionalLight2" type="DirectionalLight" parent="." index="25"]
transform = Transform( 1, 0, 0, 0, 0.366801, -0.930299, 0, 0.930299, 0.366801, 0, -33.1729, 0 )
visible = false
layers = 1
light_color = Color( 1, 1, 1, 1 )
light_energy = 0.3
light_indirect_energy = 1.0
light_negative = false
light_specular = 0.5
light_bake_mode = 1
light_cull_mask = -1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.1
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
directional_shadow_mode = 2
directional_shadow_split_1 = 0.1
directional_shadow_split_2 = 0.2
directional_shadow_split_3 = 0.5
directional_shadow_blend_splits = false
directional_shadow_normal_bias = 0.8
directional_shadow_bias_split_scale = 0.25
directional_shadow_depth_range = 0
directional_shadow_max_distance = 200.0
_sections_unfolded = [ "Light" ]

[node name="Camera2" type="Camera" parent="." index="26"]
transform = Transform( 0.999976, -0.00685859, 0.000682579, 0.00689247, 0.995059, -0.0990406, 7.25079e-08, 0.099043, 0.995083, -1.14014, 154.86, 27.9345 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = false
fov = 70.0
size = 1.0
near = 0.05
far = 100.0

